# python-api-training

./: .gitignore  Flights_ Flights by distance.csv  README.md  demos.yaml  pyproject.toml  upload_dataset.py  upload_run.py
answers/: upload_dataset.py
data/: capex.csv  electricity.csv  employees.csv  facilities copy.csv  facilities.csv  opex.csv
scripts/: run  setup
src/: __init__.py  dataset.py
src/demos/: __init__.py  demo_1.py
