[tool.poetry]
name = "watershed-api-example"
version = "0.1.0"
description = ""
authors = ["Hazel Gurule <hazel@watershedclimate.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
types-requests = "^2.31.0.20240406"
requests = "^2.32.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
