[tool.poetry]
name = "watershed-api-example"
version = "0.1.0"
description = ""
authors = ["Hazel Gurule <hazel@watershedclimate.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
types-requests = "^2.31.0.20240406"
requests = "^2.31.0"
pandas = "^2.2.2"
attrs = "^23.2.0"
pandas-stubs = "^2.2.2.240514"
inquirer = "^3.2.4"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
